Added more filters one can add to /api/checks.
